frontend-nextjs/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-nextjs-deployment
    namespace: dagligvare
spec:
  selector:
    matchLabels:
      app: frontend-nextjs
  replicas: 1
  template:
    metadata:
        labels:
            app: frontend-nextjs
    spec:
        containers:
        - name: frontend-nextjs
          image: registry.digitalocean.com/dagligvare/nextjs-frontend-app@sha256:152da2344ed74e9c1c9298b63ca6c5caba0d2bdcc5e49493713aab9cbcd2d2e3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
