frontend-nextjs/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dagligvare
spec:
  selector:
    app: frontend-nextjs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
